2006-10-24  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	* gas/ppc/cell.s: New file.
	* gas/ppc/cell.d: New file.
	* gas/ppc/ppc.exp: Test cell.s.

2006-10-23  Dwarakanath Rajagopal  <dwarak.rajagopal@amd.com>

	* gas/i386/amdfam10.d : Modify to support for the change in POPCNT
	opcode in amdfam10 architecture.
	* gas/i386/x86-64-amdfam10.d : Ditto.

2006-10-21  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/sh/sh64/syntax-1.d: Update.

2006-10-20  Andrew Stubbs  <andrew.stubbs@st.com>

	* gas/sh/pcrel-coff.d: Update patterns (remove 0x on addresses).
	* gas/sh/pcrel-hms.d: Likewise.
	* gas/sh/pcrel.d: Likewise.
	* gas/sh/pcrel2.d: Likewise.
	* gas/sh/pic.d: Likewise.
	* gas/sh/tlsd.d: Likewise.
	* gas/sh/tlsdnopic.d: Likewise.
	* gas/sh/tlsdpic.d: Likewise.

2006-10-16  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Indent "x86-64-nops-1".

2006-10-08  Paul Brook  <paul@codesourcery.com>

	* testsuite/gas/arm/neon-cov.s: Test pseudo-instruction forms of
	vmov, vmvn and logic immediate instructions.
	* testsuite/gas/arm/neon-cov.d: ditto.

2006-09-28  Bridge Wu  <mingqiao.wu@gmail.com>

	* gas/arm/iwmmxt-wldstbh.s: New file.
	* gas/arm/iwmmxt-wldstbh.d: New file.

2006-09-26  Mark Shinwell  <shinwell@codesourcery.com>
            Joseph Myers  <joseph@codesourcery.com>
            Ian Lance Taylor  <ian@wasabisystems.com>
            Ben Elliston  <bje@wasabisystems.com>

	* gas/arm/iwmmxt2.s: New file.
	* gas/arm/iwmmxt2.d: New file.

2006-09-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/3235
	* gas/i386/addr16.d: New file.
	* gas/i386/addr16.s: Likewise.
	* gas/i386/addr32.d: Likewise.
	* gas/i386/addr32.s: Likewise.

	* gas/i386/i386.exp: Add "addr16" and "addr32".

	* gas/i386/x86-64-addr32.s: Add tests for "add32 mov".
	* gas/i386/x86-64-addr32.d: Updated.

2006-09-20  Kai Tietz  <Kai.Tietz@onevision.com>

	* gas/all/gas.exp: Add support for x86_64-*-mingw64.
	* gas/i386/immed64.d: Add #pass for avoid proplems with alignment paddings.