@@ -61,6 +61,8 @@ if [istarget "x86_64-*"] then {
 
 } elseif { [istarget "mips*-*"] } then {
     run_dump_test "cfi-mips-1"
+} elseif { [istarget "hppa*-linux*"] } then {
+    run_dump_test "cfi-hppa-1"
 } else {
     return
 }
