@@ -1,3 +1,9 @@
+2006-10-29  Randolph Chung  <tausq@debian.org>
+
+	* gas/cfi/cfi.exp [hppa*-linux*]: Run hppa CFI test.
+	* gas/cfi/cfi-hppa-1.s: New file.
+	* gas/cfi/cfi-hppa-1.h: New file.
+
 2006-10-24  Andrew Pinski  <andrew_pinski@playstation.sony.com>
 
 	* gas/ppc/cell.s: New file.
